bin/testsuite/tests/compiler/src/errors/compiler2584.swg
#global testerror "Err0023"

func toto() throw
{
}

//#[Swag.PrintBc]
#test
{
    var x: func()
    x = &toto
    try x()
}
